[package]
name = "matcher"
version = "0.1.0"
authors = ["risboo6909 <risboo6909@yandex-team.ru>"]

[dependencies]
min-max-heap = "1.2.0"
criterion = "0.2"
csv = "1"

[lib]
name = "matcher"
path = "src/lib.rs"

[[bin]]
name = "matcher"
path = "src/main.rs"

[[bench]]
name = "my_benchmark"
harness = false
